--- a/Client/Views/Home/Index.cshtml
+++ b/Client/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Task Track Pro";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+
+<div class="video-container position-relative">
+    <video autoplay loop muted playsinline class="w-100">
+        <source src="~/Images/background.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </div>
