--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -66,6 +66,17 @@ body {
   transition: opacity 0.5s ease-out;
 }
 
+@keyframes jump {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-10px); }
+}
+
+.jumping-icon {
+  display: inline-block;
+  animation: jump 1s infinite;
+}
+
+
 /* Loader Animation */
 .dots {
   display: flex;
